--- a/styles/modules/Article.scss
+++ b/styles/modules/Article.scss
@@ -227,6 +227,3 @@
     > .icon:last-child { display: none; }
   }
 }
-.mce-floatpanel, .mce-floatpanel * {
-  box-sizing: content-box!important;
-}
